# g2o

./: .gitmodules  CMakeLists.txt
cmake_modules/: FindEigen3.cmake  FindG2O.cmake  FindQGLViewer.cmake
g2o/core/: base_vertex.h  base_vertex.hpp  robust_kernel_factory.cpp
g2o/examples/: CMakeLists.txt
g2o/examples/SBA_depth/: CMakeLists.txt  EdgeProjectXYZ2UVD.h  SBA_Depth.h  sba_depth.cpp
g2o/examples/SBA_depth_expmap/: CMakeLists.txt  README.md  sba_depth_expmap.cpp
g2o/examples/absolute_referencing/: CMakeLists.txt
g2o/examples/ba_anchored_inverse_depth/: CMakeLists.txt  ba_anchored_inverse_depth_demo.cpp
g2o/examples/slam3d/: CMakeLists.txt  absolute_referencing_test.cpp
g2o/examples/tutorial_slam2d/: CMakeLists.txt  edge_se2_pointxy.cpp  experiment_slam2d_abs_init.cpp
g2o/types/slam3d/: CMakeLists.txt  edge_se3.cpp  edge_se3_pointxyz_depth.cpp  edge_se3_pointxyz_uv.cpp  edge_se3_pointxyz_uv.h  edge_se3expmap_pointxyz_depth.cpp  edge_se3expmap_pointxyz_depth.h  parameter_camera.cpp  parameter_camera.h  parameter_se3_offset.h  se3quat.h
