INCLUDE_DIRECTORIES(${CSPARSE_INCLUDE_DIR})


#---------------------------------------------------
ADD_EXECUTABLE(absolute_referencing_test
  absolute_referencing_test.cpp
)

SET_TARGET_PROPERTIES(absolute_referencing_test PROPERTIES OUTPUT_NAME absolute_referencing_test${EXE_POSTFIX})

SET(G2O_ROOT ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(G2O REQUIRED)

SET(G2O_LIBRARIES "${G2O_CORE_LIBRARY};${G2O_STUFF_LIBRARY};${G2O_TYPES_DATA};${G2O_TYPES_ICP};${G2O_TYPES_SBA};${G2O_TYPES_SCLAM2D};${G2O_TYPES_SIM3};${G2O_TYPES_SLAM2D};${G2O_TYPES_SLAM3D};${G2O_SOLVER_CSPARSE};${G2O_SOLVER_CHOLMOD};${G2O_SOLVER_CSPARSE_EXTENSION};${G2O_SOLVER_DENSE};${G2O_SOLVER_PCG};${G2O_SOLVER_SLAM2D_LINEAR};${G2O_SOLVER_STRUCTURE_ONLY};${G2O_SOLVER_EIGEN};${CSPARSE_LIBRARY}")

#MESSAGE(STATUS "G2O-Libraries:\n\t: ${G2O_LIBRARIES}")
TARGET_LINK_LIBRARIES(absolute_referencing_test ${G2O_LIBRARIES})


